--- a/src/main/resources/assets/terraria/lang/en_us.json
+++ b/src/main/resources/assets/terraria/lang/en_us.json
@@ -5,6 +5,10 @@
   "advancements.collector.timber.title": "Timber!!",
   "advancements.collector.obtain_hammer.description": "Obtain your first hammer via crafting or otherwise.",
   "advancements.collector.obtain_hammer.title": "Stop! Hammer Time!",
+  "attribute.name.generic.magic_damage": "Magic Damage",
+  "attribute.name.generic.melee_damage": "Melee Damage",
+  "attribute.name.generic.ranged_damage": "Ranged Damage",
+  "attribute.name.generic.summon_damage": "Summon Damage",
   "block.terraria.amethyst": "Amethyst",
   "block.terraria.amethyst_gem": "Amethyst Gem",
   "block.terraria.ash": "Ash",
